refactoring AppTest.java and Plain.java

--- a/app/src/test/resources/files/firstYaml.yml
+++ b/app/src/test/resources/files/firstYaml.yml
@@ -1,16 +1,24 @@
-obj1:
-  setting1: Some value
-  setting2: true
+setting1: Some value
+setting2: 200
+setting3: true
 key1: value1
 numbers1:
   - 1
   - 2
+  - 3
+  - 4
 numbers2:
+  - 2
+  - 3
   - 4
   - 5
 id: 45
 default: null
 checked: false
+numbers3:
+  - 3
+  - 4
+  - 5
 chars1:
   - a
   - b
